start-microfrontends/k8s/qa/ferroviarios-microfront/ferroviarios-microfront-service-qa.yaml
# Expose the deployment using a Service
apiVersion: v1
kind: Service
metadata:
  name: modulefederation-ferroviarios-microfront-service-qa
spec:
  selector:
    app: modulefederation-ferroviarios-microfront-qa
  ports:
    - protocol: TCP
      port: 4232
      targetPort: 80
  type: NodePort
