start-microfrontends/k8s/qa/ferroviarios-microfront/ferroviarios-microfront-ingress-qa.yaml
# Create Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: modulefederation-ferroviarios-microfront-ingress-qa
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: front.v30.ultrasist.net
    http:
      paths:
      - path: /ferroviarios(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: modulefederation-ferroviarios-microfront-service-qa
            port:
              number: 4232
  tls:
  - hosts:
    - front.v30.ultrasist.net
    secretName: v30certs
